[ISSUES #215] Support docker (#329)
* connect support docker

* connect support docker bug fix

* connect support docker bug fix

* connect support docker

* remove check_java_opts

* connect support docker

* connect support docker

* connect support docker

* connect support docker

* connect support docker

* connect support docker

* connect support docker

* connect support docker

* connect support docker

* add connect support docker doc

---------

Co-authored-by: Fan Lin <jinji.lf@alibaba-inc.com>